--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ALFRED OSEI | PORTFOLIO</title>
-    <link rel="icon" href="images/portfolio logo.svg" type="image/svg+xml">
+    <link rel="icon" href="images/PORTFOLIO LOGO.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
