--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALFRED OSEI | PORTFOLIO</title>
+    <title>KARTHIKKUMARREDDY | PORTFOLIO</title>
     <link rel="icon" href="https://github.com/alfosei/portfolio/tree/main/images/PORTFOLIO LOGO.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -88,7 +88,7 @@
     </main>
 
     <footer>
-        <p>© 2025 ALFRED OSEI | CRAFTED WITH CARE</p>
+        <p>© 2024 KARTHIKKUMARREDDY | CRAFTED WITH CARE</p>
     </footer>
     <script src="scripts/app.js"></script>
 </body>
